--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
-  </head>
-  <body>
-    <link rel="stylesheet" href="style.css" />
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="style.css" />
+  <title>Document</title>
+</head>
+
+<body>
+  <section class="genres">
+    <section id="action" class="genre-box">Action</section>
+    <section id="thriller" class="genre-box">Thriller</section>
+    <section id="comedy" class="genre-box">Comedy</section>
+    <section id="horror" class="genre-box">Horror</section>
+    <section id="drama" class="genre-box">Drama</section>
+    <section id="romance" class="genre-box">Romance</section>
+  </section>
+</body>
+
 </html>
